<resources>
    <string name="app_name">PokemonApp</string>
    <string name="pokemon_logo">Pokemon logo</string>
    <string name="pokemon_database">Pokemon Database</string>
    <string name="pokeBall_icon">Pokeball icon</string>
    <string name="welcome_to_the_pokemon_database_app">Welcome to the Pokemon Database App!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="pikachu_image">Pikachu image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? Register now!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="already_have_an_account_login_now">Already have an account? Login now!</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="reset_password">Reset password</string>
    <string name="please_enter_the_email_you_use_to_sign_in_to_pokemonapp">Please enter the email you use to sign in to PokemonApp</string>
    <string name="send">Send</string>
    <string name="cancel"><u>Cancel</u></string>
</resources>